--- a/config.yaml
+++ b/config.yaml
@@ -12,15 +12,15 @@ page:
   startPageNumber: 1
 toc:
   enabled: true
-  lineHeight: 1.3
-  fontSize: 11
+  lineHeight: 1.1
+  fontSize: 13
 spaces:
   paragraph: 2.0
   heading: 3.0
 paper:
   title: Paper
   authors: Anonymous
-  debug: false
+  debug: true
 citation:
   enabled: true
   file: citations.bib
