--- a/config.yaml
+++ b/config.yaml
@@ -1,26 +1,28 @@
 text:
-  fontSize: 11
-  lineHeight: 1.2
-  listLineHeight: 1
+    fontSize: 11
+    lineHeight: 1.2
+    listLineHeight: 1
 page:
-  marginTop: 20
-  marginBottom: 20
-  marginHori: 15
-  columnGap: 7
-  columns: 2
-  pageNumbers: true
-  startPageNumber: 1
+    marginTop: 20
+    marginBottom: 20
+    marginHori: 15
+    columnGap: 7
+    columns: 2
+    pageNumbers: true
+    startPageNumber: 1
 toc:
-  enabled: true
-  lineHeight: 1.1
-  fontSize: 13
+    enabled: true
+    lineHeight: 1.3
+    fontSize: 11
+    heading: Table of Contents
 spaces:
-  paragraph: 2.0
-  heading: 3.0
+    paragraph: 2
+    heading: 2
 paper:
-  title: Paper
-  authors: Anonymous
-  debug: true
+    title: Paper
+    authors: Anonymous
+    debug: false
 citation:
-  enabled: true
-  file: citations.bib
+    enabled: true
+    file: citations.bib
+    heading: References
