create demo directory to clean up

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
-
-outp
-mdpaper
-mdpaper.exe
-Paper.pdf
-debug.txt
-Big.pdf
-paper_big.md
-make.bat
-simple.md
-simple.md
-images
-alt.md
-T3_1000_Paper.pdf
-testingRessources
+*.pdf
+*.md
+config.yaml
+*.txt
+**/mdpaper
+**/mdpaper.exe
+!demo/**
+demo/mdpaper
