--- a/demo/config.yaml
+++ b/demo/config.yaml
@@ -1,29 +1,35 @@
 text:
-  fontSize: 11
-  lineHeight: 1.2
-  listLineHeight: 1
+    fontSize: 11
+    lineHeight: 1.2
+    listLineHeight: 1
 page:
-  marginTop: 20
-  marginBottom: 20
-  marginHori: 15
-  columnGap: 7
-  columns: 2
-  pageNumbers: true
-  startPageNumber: 1
+    marginTop: 20
+    marginBottom: 20
+    marginHori: 15
+    columnGap: 7
+    columns: 2
+    pageNumbers: true
+    startPageNumber: 1
 toc:
-  enabled: true
-  lineHeight: 1.3
-  fontSize: 11
-  heading: Table of Contents
+    enabled: true
+    lineHeight: 1.3
+    fontSize: 11
+    heading: Table of Contents
 spaces:
-  paragraph: 2
-  heading: 2
+    paragraph: 2
+    heading: 2
+    code: 2
 paper:
-  title: Zebra Finch
-  authors: University of Wisconsin–Madison
-  debug: false
-  mermaid: true
+    title: Zebra Finch
+    authors: University of Wisconsin-Madison
+    debug: false
 citation:
-  enabled: true
-  file: citations.bib
-  heading: References
+    enabled: true
+    file: citations.bib
+    heading: References
+code:
+    style: dracula
+    fontSize: 10
+    characterSpacing: 0
+    lineNumbers: true
+    mermaid: true
