disable automatic builds for release for now

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,8 @@
 # .github/workflows/release.yaml
 
 on:
-  release:
-    types: [created]
+#  release:
+#    types: [created]
   workflow_dispatch:
 
 jobs:
